fix: horizontal scroll and background

--- a/static/style/inverted-style.css
+++ b/static/style/inverted-style.css
@@ -519,6 +519,8 @@
     position: relative;
     display: inline-block;
     width: 100%;
+    overflow-x: scroll;
+    background-color: var(--background-color-light);
   }
   .preview pre code {
     font-family: monospace;
